Start work on global arrays, with Cartesian MPI communicator

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-examples/euler1d
-examples/srhd1d
-examples/euler1d_gpu
 examples/array_demo
 examples/array_demo_gpu
-examples/hdf5_demo
 examples/config_demo
+examples/euler1d
+examples/euler1d_gpu
+examples/global_array
+examples/hdf5_demo
 examples/sim_demo
+examples/srhd1d
 *.h5
 *.cfg
