Walk back the global array feature for now
The MPI support routines are still present in
comm.hpp and are demo'd in examples/mpi_demo

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@ examples/array_demo_gpu
 examples/config_demo
 examples/euler1d
 examples/euler1d_gpu
-examples/global_array
 examples/hdf5_demo
+examples/mpi_demo
 examples/sim_demo
 examples/srhd1d
-*.h5
 *.cfg
 *.dSYM
+*.h5
