--- a/project.json
+++ b/project.json
@@ -1,4 +1,8 @@
 {
+	"src": "examples",
+	"bin": "bin",
+	"build": "build",
+	"vapor": ".",
 	"programs": {
 		"array_demo": {
 
@@ -21,5 +25,6 @@
 		"srhd1d": {
 
 		}
-	}
+	},
+	"default_modes": ["dbg", "cpu", "omp"]
 }
